Implement TrackLayout parsing service

--- a/CTCOffice/build.gradle
+++ b/CTCOffice/build.gradle
@@ -4,4 +4,5 @@ mainClassName = "CTCOffice.CTCOffice"
 
 dependencies {
     compile group: 'com.google.inject', name: 'guice', version: '4.1.0'
+    compile project(':TrackModel')
 }
