--- a/System/build.gradle
+++ b/System/build.gradle
@@ -1,3 +1,3 @@
 dependencies {
-    compile project(':CTCOffice'), project(':TrackController'), project(':TrainController'), project(':TrainModel')
+    compile project(':CTCOffice'), project(':TrackController'), project(':TrainController'), project(':TrainModel'), project(':TrackModel')
 }
