--- a/build.gradle
+++ b/build.gradle
@@ -14,5 +14,6 @@ subprojects {
 
     dependencies {
         testCompile group: 'junit', name: 'junit', version: '4+'
+        testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
     }
 }
