Manual merge conflicts

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
 rootProject.name = 'NorthShoreExtension'
 
 include ":CTCOffice", ":TrackController", ":TrainController", ":TrainModel", ":TrackModel"//, ":System"
+include 'System'
 
