--- a/System/build.gradle
+++ b/System/build.gradle
@@ -1,3 +1,11 @@
+apply plugin: "application"
+
+mainClassName = "System.NseMain"
+
 dependencies {
-    compile project(':CTCOffice'), project(':TrackController'), project(':TrainController'), project(':TrainModel'), project(':TrackModel')
+    compile project(':TrackModel')
+    compile project(':TrainModel')
+    compile project(':TrackController')
+    compile project(':TrainController')
+    compile project(':CTCOffice')
 }
