--- a/TrainController/build.gradle
+++ b/TrainController/build.gradle
@@ -4,4 +4,5 @@ mainClassName = "TrainController.Main"
 
 dependencies {
     compile group: "eu.hansolo", name: "Medusa", version: "7.9"
+    compile project(':TrackModel')
 }
