--- a/build.gradle
+++ b/build.gradle
@@ -15,5 +15,6 @@ subprojects {
     dependencies {
         testCompile group: 'junit', name: 'junit', version: '4+'
         testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
+        compile group: 'com.google.inject', name: 'guice', version: '4.1.0'
     }
 }
